--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/entry-client.tsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/squirrelly"></script>
   </body>
 </html>
